--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "findTodos.js",
   "scripts": {
     "test": "jest --config ./jest.config.json",
-    "test:watch": "npm run test --watch"
+    "test:watch": "npm run test --watch",
+    "test:coverage": "jest --config ./jest.config.json --coverage"
   },
   "keywords": [
     "TODO",
